--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint --resolve-plugins-relative-to . --ext .jsx,.js .",
     "fix": "eslint --resolve-plugins-relative-to . --fix --ext .jsx,.js .",
     "prettier": "prettier --write .",
-    "test": "jest",
+    "test": "jest --runInBand",
     "stats": "webpack --profile --json --mode=production >./build/stats.json",
     "babel": "babel",
     "babel:test": "babel --env-name test"
@@ -37,6 +37,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-testing-library": "^3.1.3",
     "file-loader": "^6.0.0",
     "jest": "^26.0.0",
     "lodash-webpack-plugin": "^0.11.5",
