--- a/zucchini-ui-e2e-tests/.eslintrc
+++ b/zucchini-ui-e2e-tests/.eslintrc
@@ -1,10 +1,5 @@
 {
   "root": false,
   "parser": "babel-eslint",
-  "plugins": [
-    "cypress"
-  ],
-  "env": {
-    "cypress/globals": true
-  }
+  "extends": ["plugin:cypress/recommended"]
 }
