--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -66,6 +66,7 @@
     "lodash": "^4.17.4",
     "pure-uuid": "^1.5.6",
     "query-string": "^6.0.0",
+    "quick-lru": "^5.1.1",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.7.0",
