--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ allprojects {
         List<String> dockerTags = []
 
         // Branch slug, without special characters
-        String branchName = project.grgit.branch.current.name
+        String branchName = project.grgit.branch.current().name
         String branchSlug = branchName.replace('/', '-')
 
         // If the Git branch is the master branch, then the Docker image will be tagged "latest"
@@ -122,15 +122,12 @@ allprojects {
 
         // Shared Java compiler config
         project.tasks.withType(JavaCompile) {
-
-            project.sourceCompatibility = '11'
-            project.targetCompatibility = '11'
+            options.release = 11
 
             options.encoding = 'UTF-8'
             options.deprecation = true
             options.compilerArgs << '-parameters'
             options.compilerArgs << '-Werror'
-
         }
 
     }
