--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -22,7 +22,7 @@
     "@babel/register": "^7.11.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.2",
-    "autoprefixer": "^9.4.7",
+    "autoprefixer": "^10.0.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.0.0",
     "babel-loader": "^8.0.5",
@@ -43,7 +43,8 @@
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^8.0.5",
+    "postcss-loader": "^4.0.2",
     "prettier": "^2.0.0",
     "react-test-renderer": "^16.7.0",
     "redux-freeze": "^0.1.5",
