--- a/build.gradle
+++ b/build.gradle
@@ -75,10 +75,19 @@ allprojects {
 
             project.dependencies {
 
-                testImplementation 'junit:junit:4.13.1'
+                testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+                testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
                 testImplementation 'org.assertj:assertj-core:3.17.2'
                 testImplementation 'org.mockito:mockito-core:3.5.13'
+                testImplementation 'org.mockito:mockito-junit-jupiter:3.5.13'
 
+            }
+
+            // Tests
+
+            project.test {
+                useJUnitPlatform()
             }
 
             // Maven plugin
@@ -198,11 +207,6 @@ project("${rootProject.name}-backend") {
 
         implementation 'javax.xml.bind:jaxb-api:2.3.1'
         runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
-
-        testImplementation 'org.assertj:assertj-core:3.17.2'
-        testImplementation 'com.pholser:junit-quickcheck-core:0.9.5'
-        testImplementation 'com.pholser:junit-quickcheck-generators:0.9.5'
-
     }
 
     task runBackend(type: JavaExec, description: 'Run backend server') {
