--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -33,13 +33,13 @@
     "css-loader": "^5.0.0",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.3.0",
-    "eslint-loader": "^4.0.0",
     "eslint-plugin-jest": "^24.0.0",
     "eslint-plugin-jest-dom": "^3.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-testing-library": "^3.1.3",
+    "eslint-webpack-plugin": "^2.1.0",
     "file-loader": "^6.0.0",
     "jest": "^26.0.0",
     "lodash-webpack-plugin": "^0.11.5",
