--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,7 @@
 {
   "extends": [
     "config:base",
-    ":disableRateLimiting",
-    ":automergeMinor"
+    ":disableRateLimiting"
   ],
   "gradle": {
     "enabled": true
