--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
-          node-version: "12"
+          node-version: "14"
+          check-latest: true
 
       - name: Check Gradle
         uses: gradle/wrapper-validation-action@v1
