Add Mockito as package group

--- a/renovate.json
+++ b/renovate.json
@@ -13,6 +13,12 @@
       "packagePatterns": [
         "^io.dropwizard:"
       ]
+    },
+    {
+      "groupName": "Mockito",
+      "packagePatterns": [
+        "^org.mockito:"
+      ]
     }
   ]
 }
