Typescript for Cypress tests

--- a/zucchini-ui-e2e-tests/.eslintrc
+++ b/zucchini-ui-e2e-tests/.eslintrc
@@ -1,5 +1,13 @@
 {
   "root": false,
   "parser": "babel-eslint",
-  "extends": ["plugin:cypress/recommended"]
+  "extends": ["plugin:cypress/recommended"],
+  "overrides": [
+    {
+      "files": ["**/*.ts"],
+      "parser": "@typescript-eslint/parser",
+      "extends": ["plugin:@typescript-eslint/recommended"],
+      "plugins": ["@typescript-eslint"]
+    }
+  ]
 }
