Global TypeScript variables

--- a/zucchini-ui-e2e-tests/.eslintrc
+++ b/zucchini-ui-e2e-tests/.eslintrc
@@ -6,8 +6,7 @@
     {
       "files": ["**/*.ts"],
       "parser": "@typescript-eslint/parser",
-      "extends": ["plugin:@typescript-eslint/recommended"],
-      "plugins": ["@typescript-eslint"]
+      "extends": ["plugin:@typescript-eslint/recommended"]
     }
   ]
 }
