--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,13 @@ jobs:
       GRADLE_OPTS: "-Dorg.gradle.caching=false -Dorg.gradle.daemon=false"
       DOCKER_USERNAME: pgentile
       CYPRESS_CACHE_FOLDER: ~/.cache/Cypress
+      DEFAULT_JAVA_VERSION: 11
 
     steps:
       - name: About env
         run: |
           echo "Env"
-          env | sort
+          export
           echo
           echo "Github Action vars"
           echo "github.ref = ${{ github.ref  }}"
@@ -91,18 +92,19 @@ jobs:
         run: ./gradlew dockerComposeUp
 
       - name: Run Cypress tests
+        if: matrix.java == env.DEFAULT_JAVA_VERSION
         working-directory: ./zucchini-ui-e2e-tests
         run: yarn test
 
       - name: Collect Cypress videos
         uses: actions/upload-artifact@v2
-        if: always()
+        if: always() && matrix.java == env.DEFAULT_JAVA_VERSION
         with:
           name: Cypress videos for Java ${{ matrix.java }}
           path: ./zucchini-ui-e2e-tests/cypress/videos
 
       - name: Push Docker image
-        if: github.ref == 'refs/heads/master' && matrix.java == '11'
+        if: github.ref == 'refs/heads/master' && matrix.java == env.DEFAULT_JAVA_VERSION
         run: |
           docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
           ./gradlew dockerPush
