Run migrations in the Mongo Docker image

--- a/zucchini-ui-mongo/Dockerfile
+++ b/zucchini-ui-mongo/Dockerfile
@@ -1,8 +1,8 @@
 FROM mongo:4
 
-COPY migrate.sh /migrations/
-COPY lib /migrations/lib
-COPY migrations /migrations/migrations
+ENV MONGO_INITDB_DATABASE=zucchini
 
-WORKDIR "/migrations"
-ENTRYPOINT ["./migrate.sh"]
+COPY ./migrations/*.js /migrations/
+
+# Files in the docker-entrypoint-initdb.d dir are executed from the / working dir
+COPY ./migrate.js /docker-entrypoint-initdb.d/
