--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: "3"
 services:
 
   mongo:
-    image: "mongo:4"
+    image: "pgentile/zucchini-ui-mongo:${ZUCCHINI_VERSION:-latest}"
     ports:
       - "27017:27017"
     networks:
@@ -18,8 +18,6 @@ services:
       - "8081:8081"
     environment:
       ZUCCHINI_MONGO_URL: "mongodb://mongo/zucchini?w=majority&journal=true"
-    links:
-      - mongo
     networks:
       - mongo
 
