--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,9 +63,11 @@ jobs:
             ${{ runner.os }}-cypress-
 
       - name: Setup Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
+          distribution: adopt
+          check-latest: true
 
       - name: Setup Node
         uses: actions/setup-node@v2
