--- a/zucchini-ui-frontend/.eslintrc
+++ b/zucchini-ui-frontend/.eslintrc
@@ -26,7 +26,12 @@
       "env": {
         "jest/globals": true
       },
-      "extends": ["plugin:jest/recommended", "plugin:jest-dom/recommended", "plugin:testing-library/recommended"]
+      "extends": [
+        "plugin:jest/recommended",
+        "plugin:jest-dom/recommended",
+        "plugin:testing-library/dom",
+        "plugin:testing-library/react"
+      ]
     },
     {
       "files": ["babel.config.js", "jest.config.js", "postcss.config.js", "webpack.config.js"],
