--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,8 @@ import io.zucchini.build.node.YarnTask
 buildscript {
 
     repositories {
-        maven {
-            url 'https://plugins.gradle.org/m2/'
-        }
-        jcenter()
+        mavenCentral()
+        gradlePluginPortal()
     }
 
 }
@@ -104,8 +102,8 @@ allprojects {
 
             tasks.withType(Pmd) {
                 reports {
-                    xml.enabled = false
-                    html.enabled = true
+                    xml.required = false
+                    html.required = true
                 }
             }
 
@@ -208,7 +206,7 @@ project("${rootProject.name}-backend") {
 
         classpath = sourceSets.main.runtimeClasspath
 
-        main = 'io.zucchiniui.backend.BackendApplication'
+        mainClass = 'io.zucchiniui.backend.BackendApplication'
 
         args += ['serve', "${rootDir}/server-config.yml"]
     }
@@ -343,7 +341,7 @@ project("${rootProject.name}-example-features") {
 
         classpath = sourceSets.main.runtimeClasspath
 
-        main = 'cucumber.api.cli.Main'
+        mainClass = 'cucumber.api.cli.Main'
 
         args += [
             '--glue', 'classpath:io.zucchini.examples.glues',
@@ -362,7 +360,7 @@ project("${rootProject.name}-example-features") {
 
         classpath = sourceSets.main.runtimeClasspath
 
-        main = 'cucumber.api.cli.Main'
+        mainClass = 'cucumber.api.cli.Main'
 
         args += [
             '--glue', 'classpath:io.zucchini.examples.glues',
