--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,8 @@
   "extends": [
     "config:base",
     ":disableRateLimiting",
-    ":automergeMinor"
+    ":automergeMinor",
+    ":label(dependencies)"
   ],
   "gradle": {
     "enabled": true
