--- a/.github/workflows/browserslist.yml
+++ b/.github/workflows/browserslist.yml
@@ -8,7 +8,7 @@ on:
       - master
 
 jobs:
-  build:
+  update-browserslist:
 
     runs-on: ubuntu-latest
 
@@ -25,6 +25,17 @@ jobs:
         with:
           node-version: ${{ env.DEFAULT_NODE_VERSION }}
           check-latest: true
+
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Yarn cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       # See https://github.com/browserslist/browserslist#browsers-data-updating
       - name: Run browserslist update
