--- a/.github/workflows/browserslist.yml
+++ b/.github/workflows/browserslist.yml
@@ -43,3 +43,4 @@ jobs:
           (cd zucchini-ui-frontend && npx browserslist@latest --update-db)
           (cd zucchini-ui-e2e-tests && npx browserslist@latest --update-db)
           git status
+          git diff
