--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,6 +90,12 @@ jobs:
       - name: Test and check project
         run: ./gradlew check
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build Docker image
         run: ./gradlew dockerBuild
 
@@ -110,8 +116,4 @@ jobs:
 
       - name: Push Docker image
         if: github.ref == 'refs/heads/master' && matrix.java == env.DEFAULT_JAVA_VERSION && matrix.node == env.DEFAULT_NODE_VERSION
-        run: |
-          docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-          ./gradlew dockerPush
-        env:
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: ./gradlew dockerPush
