Create a browerslist PR

--- a/.github/workflows/browserslist.yml
+++ b/.github/workflows/browserslist.yml
@@ -45,5 +45,4 @@ jobs:
         run: |
           (cd zucchini-ui-frontend && npx browserslist@latest --update-db)
           (cd zucchini-ui-e2e-tests && npx browserslist@latest --update-db)
-          git status
-          git diff
+          ./.github/workflows/browserslist.sh
