--- a/.github/workflows/browserslist.yml
+++ b/.github/workflows/browserslist.yml
@@ -46,3 +46,5 @@ jobs:
           (cd zucchini-ui-frontend && npx browserslist@latest --update-db)
           (cd zucchini-ui-e2e-tests && npx browserslist@latest --update-db)
           ./.github/workflows/browserslist.sh
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
