--- a/.github/workflows/browserslist.yml
+++ b/.github/workflows/browserslist.yml
@@ -42,9 +42,6 @@ jobs:
 
       # See https://github.com/browserslist/browserslist#browsers-data-updating
       - name: Run browserslist update
-        run: |
-          (cd zucchini-ui-frontend && npx browserslist@latest --update-db)
-          (cd zucchini-ui-e2e-tests && npx browserslist@latest --update-db)
-          ./.github/workflows/browserslist.sh
+        run: ./.github/workflows/browserslist.sh
         env:
           GITHUB_TOKEN: ${{ github.token }}
