--- a/.github/workflows/browserslist.yml
+++ b/.github/workflows/browserslist.yml
@@ -3,6 +3,7 @@ name: Update browserslist
 on:
   schedule:
     - cron: "0 0 * * *"
+  workflow_dispatch: {}
 
 concurrency:
   group: update-browserslist
